--- a/src/app/desktop/page.module.css
+++ b/src/app/desktop/page.module.css
@@ -1,6 +1,5 @@
 .desktop {
     width: 100%;
-    color: black;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -9,7 +8,7 @@
     background-image: url("/images/logo.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-color: white;
+    background-color: #1a1a1a;
     position: relative;
 }
 
@@ -41,7 +40,7 @@
     cursor: pointer;
     display: flex;
     justify-content: center;
-    background-color: whitesmoke;
+    background-color: white;
     text-align: center;
 }
 
@@ -53,10 +52,9 @@
 
 .window {
     position: absolute;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 10px whitesmoke;
     top: 5%;
     backdrop-filter: blur(10px);
-    color: black;
     border-radius: 10px;
     padding: 20px;
     display: flex;
@@ -85,8 +83,9 @@
     width: 100%;
     height: 40px;
     margin-bottom: 20px;
+    margin-top: 20px;
     padding: 5px;
-    background-color: #fff;
+    background-color: #1a1a1a;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 24px;
@@ -95,8 +94,7 @@
 }
 
 .input {
-    background-color: #fff;
-    color: black;
+    background-color: #1a1a1a;
     border: none;
     text-align: right;
     font-size: 100%;
@@ -116,10 +114,10 @@
 
 .button {
     width: 200px;
-    color: black;
     height: 40px;
     margin: 0 5px;
-    background-color: #fff;
+    color: white;
+    background-color: #1a1a1a;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 18px;
@@ -127,21 +125,20 @@
 }
 
 .button:hover {
-    background-color: #f5f5f5;
+    background-color: #1a1a1a;
 }
 
 .button:active {
-    background-color: #ddd;
+    background-color: #1a1a1a;
 }
 
 .button:disabled {
-    background-color: #f5f5f5;
+    background-color: #1a1a1a;
     cursor: not-allowed;
 }
 
 .audioPlayer {
     display: flex;
-    color: black;
     flex-direction: column;
     align-items: center;
     padding: 10px;
@@ -152,7 +149,6 @@
     width: 100%;
     margin-top: 20px;
     border-radius: 10px;
-    color: #333;
 }
 
 .mediaViewerContainer {
@@ -194,14 +190,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
 }
 
 .toolbar input[type="file"] {
     padding: 10px;
     border: none;
     border-radius: 10px;
-    background-color: #f0f0f0;
+    background-color: #1a1a1a;
     cursor: pointer;
 }
 
@@ -226,5 +221,18 @@
     font-family: monospace;
     border: none;
     border-radius: 10px;
-    resize: vertical;
+    resize: none;
+}
+
+.fileNameInput {
+    border: 1px solid #ccc;
+    border-radius: 0.375rem;
+    padding: 0.5rem 0.75rem;
+    font-size: 0.875rem;
+}
+
+.fileNameInput:focus {
+    outline: none;
+    border-color: #3498db;
+    box-shadow: 0 0 0 1px #3498db;
 }
