--- a/src/app/desktop/page.module.css
+++ b/src/app/desktop/page.module.css
@@ -32,6 +32,12 @@
     margin-left: 8px;
 }
 
+.apps {
+    width: 15px;
+    height: 15px;
+    margin-right: 8px;
+}
+
 .icon {
     width: 40px;
     height: 40px;
@@ -99,6 +105,7 @@
     text-align: right;
     font-size: 100%;
     outline: none;
+    color: white;
 }
 
 .keys {
@@ -198,6 +205,8 @@
     border-radius: 10px;
     background-color: #1a1a1a;
     cursor: pointer;
+    border: 1px solid white;
+    color: white;
 }
 
 .toolbar button {
@@ -222,6 +231,8 @@
     border: none;
     border-radius: 10px;
     resize: none;
+    background-color: #1a1a1a;
+    border: 1px solid white;
 }
 
 .fileNameInput {
@@ -236,3 +247,4 @@
     border-color: #3498db;
     box-shadow: 0 0 0 1px #3498db;
 }
+
